@@ -6,10 +6,12 @@
 
 module t;
 `line 100 "some file" 0
-$info("aaaaaaaa");
-$info("bbbbbbbb");
+$info("aaaaaaaa file='%s'", `__FILE__);
+$info("bbbbbbbb file='%s'", `__FILE__);
 `line 200 "somefile.v" 0
-$info("cccccccc");
+$info("cccccccc file='%s'", `__FILE__);
 `line 300 "/a/somefile.v" 0
-$info("dddddddd");
+$info("dddddddd file='%s'", `__FILE__);
+`line 400 "C:\\a\\somefile.v" 0
+$info("eeeeeeee file='%s'", `__FILE__);
 endmodule
